--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,8 +1,17 @@
-<mat-toolbar class="header">
+<mat-toolbar class="header mat-elevation-z4">
     <span>
         <a>
-            <img src="/crud/frontend/src/assets/img/dev.gif" alt="Logo">
+            <img class="logo" src="/frontend/src/assets/img/jokenpo.jpg" alt="Logo">
         </a>
     </span>
+    <span class="title-group">
+        <a>
+            <i class="material-icons">
+                dashboard
 
+            </i>
+            Aplicação Crud
+        </a>
+
+    </span>
 </mat-toolbar>
