--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="header mat-elevation-z4">
     <span>
         <a>
-            <img class="logo" src="/frontend/src/assets/img/jokenpo.jpg" alt="Logo">
+            <img class="logo" src="/frontend/src/assets/img/sw.png" alt="Logo">
         </a>
     </span>
     <span class="title-group">
